@@ -1,5 +1,6 @@
 Version 2.00.22 - 
 ==================================
+  Restructure xlate.h
 
 Version 2.00.21 - 19th August 2004
 ==================================
